package zoo;

public interface Feedable {
    public void eat(String food);
}
